js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-arrow-assignment-expression-typeof-import-source.js
DONOTEVALUATE
(
)
;
let
f
=
(
)
=
>
typeof
import
.
source
;
